adicionei as paginas de help com algumas guias prontas

--- a/doug/comunity/comunity.html
+++ b/doug/comunity/comunity.html
@@ -63,7 +63,26 @@
                 <p>Autor: <a href="#">Junim pro do PHP</a></p> 
 
                 <div class="review_iten">
-                    <button><i class="fa-regular fa-thumbs-up" style="color: #8DB1AB; font-size: 30px; margin-right: 10px;"></i></button>
+                    <button><i class="fa-regular fa-thumbs-up" style="color: #8DB1AB; font-size: 30px; margin-right: 10px; background: 0;"></i></button>
+                    <p style="margin-right: 30px;">15K</p>
+                    <button><i class="fa-regular fa-comment" style="color: #8DB1AB; font-size: 30px; margin-right: 10px;"></i></button>
+                    <p>15K</p>
+                </div>
+                <hr>
+            </div>
+
+            <div class="painel_content_iten">
+                <div class="content_iten_title_icons">
+                    <a href="#" class="content_iten_title">Tecnologia para Programadores</a>
+                    <div class="content_iten_icon">
+                        <i class="fa-solid fa-circle-check" style="color: #8DB1AB; font-size: 28px; margin-right: 10px; "></i>
+                        <i class="fa-solid fa-fire" style="color: orange; font-size: 28px;"></i>
+                    </div>
+                </div>
+                <p>Autor: <a href="#">Junim pro do PHP</a></p> 
+
+                <div class="review_iten">
+                    <button><i class="fa-regular fa-thumbs-up" style="color: #8DB1AB; font-size: 30px; margin-right: 10px; background: 0;"></i></button>
                     <p style="margin-right: 30px;">15K</p>
                     <button><i class="fa-regular fa-comment" style="color: #8DB1AB; font-size: 30px; margin-right: 10px;"></i></button>
                     <p>15K</p>
