--- a/doug/help/help-page.html
+++ b/doug/help/help-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nexus Studium</title>
+    <title>Página de ajuda</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -47,7 +47,7 @@
 
             </div>
             <div class="painel_question">
-                <h2>AJUDA</h2>
+                <h2>Perguntas Frequentes</h2>
                 <nav>
                     <ul class="question_list">
                         <li>Como criar minha conta nexus? <i class="fa-solid fa-circle-chevron-down" style="color: #086788; font-size: 30px;"></i></li>
@@ -60,6 +60,48 @@
                 </nav>
 
             </div>
+
+            <div class="painel_about">
+                <h2>Sobre</h2>
+                <div class="about_content">
+                    <div class="about_top">
+                        <h2>NOSSA HISTÓRIA</h2>
+                    </div>
+
+                    <div class="about_text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere praesentium error nam necessitatibus voluptates quibusdam autem tenetur incidunt placeat vero magnam ut culpa saepe modi, repudiandae ea rerum? Commodi, id.
+                        Ratione doloremque vero voluptatem, perspiciatis provident voluptas labore porro natus. Dolor aliquam doloremque dicta corporis deserunt voluptatem dolores perspiciatis aliquid quod tenetur. Provident officia ad cupiditate hic sequi a magni.
+                        Dicta fuga recusandae numquam esse voluptatibus. Obcaecati eaque quidem minus quod adipisci eveniet dolor voluptatum libero ea provident sapiente, velit sequi temporibus. Et in culpa placeat magni suscipit laboriosam! Eligendi.
+                        Nobis debitis nam dolorem praesentium sed quam, ad, nesciunt tempore impedit quas voluptatibus consequuntur sequi velit! Neque quidem ipsam consectetur architecto incidunt facere culpa officiis suscipit laboriosam, repellat commodi at.
+                        Sunt, accusantium modi. Voluptas ipsum tempore, libero temporibus natus, voluptatem amet facere provident quae commodi voluptatibus ex quibusdam accusantium. Cupiditate quidem ea ipsa. Quaerat velit veniam inventore quam distinctio natus?
+                        Reiciendis quibusdam nostrum nisi illo sunt unde porro ex rem nulla quis, saepe facilis corporis maxime maiores voluptate, cum sequi enim expedita quaerat a et ab. Velit debitis explicabo autem?
+                        Quaerat, quisquam animi. Reiciendis eum ab aut amet quidem qui voluptas possimus. Vel, distinctio totam. Minima consectetur quas nam qui, ex voluptatem architecto veniam similique nihil asperiores laudantium provident delectus!
+
+                    </div>
+                </div>
+    
+            </div>
+            <div class="painel_feedback">
+                <h2>Feedback</h2>
+                <div class="feedback_content">
+                    <div class="feedback_top">
+                        <h2>NOS DEIXE UM FEEDBACK!</h2>
+                    </div>
+
+                    <div class="feedback_text">
+                        <input class="input_info" type="text" placeholder="NOME">
+                        <input class="input_info" type="text" placeholder="TELEFONE">
+                        <input class="input_info" type="text" placeholder="EMAIL">
+
+                        <input class="input_feedback" type="text" placeholder="DIGITE AQUI SUA MENSAGEM">
+
+                        <div class="right"><button class="btnFeedback">Enviar</button></div>
+                    </div>
+
+                </div>
+                
+            </div>
+
         </div>
 
     </main>
