--- a/login-page/index.html
+++ b/login-page/index.html
@@ -34,39 +34,34 @@
     </header>
     
     <main class="grid-container">
-        <div class="carrossel flex">
-            <div class="div-container">
-                <div class="slide-div flex" id="slide-1">
-                    <div class="bg flex" id="bg4">
-                        <h2 class="carrossel-title">Trilha de Estudos</h2>
-                        <p class="carrossel-subtitle">Se desenvolva através de um caminho pré-definido por profissionais
-                            experientes</p>
-                    </div>
-                </div>
+        <div class="container">
+            <div class="panel flex active">
+                <h3 class="carrossel-title">Trilha</h3>
+                <p class="carrossel-sub">Se desenvolva através de um caminho pré-definido por profissionais experientes
+                </p>
 
-                <div class="slide-div flex" id="slide-2">
-                    <div class="bg flex" id="bg5">
-                        <h2 class="carrossel-title">Trilha de Estudos</h2>
-                        <p class="carrossel-subtitle">Se desenvolva através de um caminho pré-definido por profissionais
-                            experientes</p>
-                    </div>
-                </div>
+            </div>
+            <div class="panel flex">
+                <h3 class="carrossel-title">Artigos</h3>
+                <p class="carrossel-sub">Aprenda através de textos feitos pela comunidade</p>
+            </div>
+            <div class="panel flex">
+                <h3 class="carrossel-title">Exercícios</h3>
+                <p class="carrossel-sub">Pratique seus conhecimentos através de exercícios</p>
 
-                <div class="slide-div flex" id="slide-3">
-                    <div class="bg flex" id="bg6">
-                        <h2 class="carrossel-title">Trilha de Estudos</h2>
-                        <p class="carrossel-subtitle">Se desenvolva através de um caminho pré-definido por profissionais
-                            experientes</p>
-                    </div>
-                </div>
+            </div>
+            <div class="panel flex">
+                <h3 class="carrossel-title">Comunidade</h3>
+                <p class="carrossel-sub">Retire suas dúvidas e expanda seus conhecimentos com auxilio de outros usuários
+                </p>
+
+            </div>
+            <div class="panel flex">
+                <h3 class="carrossel-title">Em alta</h3>
+                <p class="carrossel-sub">Busque os vídeos e trilhas mais vistos</p>
+
             </div>
         </div>
-
-        <aside class="filter">
-            <div class="main-filter"><i class="fa-solid fa-filter"></i>Em alta
-                <i class="fa-solid fa-chevron-down"></i>
-            </div>
-        </aside>
 
         <aside class="topics">
             <div class="gp-1">
@@ -103,7 +98,7 @@
             <p>Copyright &copy; Todos os direitos reservados</p>
         </div>
 
-        <script src="./modal.js"></script>
+        <script src="../script.js"></script>
     </footer>
 </body>
 
