linkando paginas e organizando css

--- a/user-settings/user-information/index.html
+++ b/user-settings/user-information/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul class="grid-header">
                 <li class="menu-btn">
-                    <img class="menu-icon" src="../../img/logomarca-png.png" alt="Logomarca do Nexus Studium">
+                    <a href="../../index.html"><img class="menu-icon" src="../../img/logomarca-png.png" alt="Logomarca do Nexus Studium"></a>
                 </li>
                 <li class="search-bar">
                     <div>
@@ -28,9 +28,9 @@
                     </div>
                 </li>
                 <li class="user-button">
-                    <div class="flex user-page">
+                    <a href="../../user/historic/index.html"><div class="flex user-page">
                         <i class="fa-solid fa-user fa-2x"></i>
-                    </div>
+                    </div></a>
                 </li>
             </ul>
         </nav>
