--- a/login-page/index.html
+++ b/login-page/index.html
@@ -15,7 +15,8 @@
     <header>
         <nav>
             <ul class="nav flex">
-                <li class="nav-btn flex"><img src="../img/logomarca-png.png" alt="Logomarca NexusStudium" width="100px"></li>
+                <li class="nav-btn flex"><img src="../img/logomarca-png.png" alt="Logomarca NexusStudium" width="100px">
+                </li>
                 <li class="search-bar">
                     <div>
                         <form class="bg-search">
@@ -23,16 +24,19 @@
                                         src="../img/searchIcon.svg" alt=""></i></button>
                             <input class="search-input" type="text" placeholder="O que você quer aprender?">
                         </form>
-                    </div></li>
-                    <li class="user-button">
-                        <a href="../user/historic/index.html"><div class="flex user-page">
+                    </div>
+                </li>
+                <li class="user-button">
+                    <a href="../user/historic/index.html">
+                        <div class="flex user-page">
                             <i class="fa-solid fa-user fa-2x"></i>
-                        </div></a>
-                    </li>
+                        </div>
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
-    
+
     <main class="grid-container">
         <div class="container">
             <div class="panel flex active">
