--- a/user/historic/index.html
+++ b/user/historic/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="user-name flex">Seu Nome</div>
             <div class="user-settings">
-                <button class="user-setting flex"><a href="../user-information/index.html">Config. da Conta</a></button>
+                <button class="user-setting flex"><a href="../../user-settings/user-information/index.html">Config. da Conta</a></button>
                 <div class="user-video flex">Seus Vídeos</div>
             </div>
         </section>
