--- a/user-settings/user-security/index.html
+++ b/user-settings/user-security/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul class="grid-header">
                 <li class="menu-btn">
-                    <a href="../../index.html"><img class="menu-icon" src="../../img/logomarca-png.png" alt="Logomarca do Nexus Studium"></a>
+                    <a href="../../login-page/index.html"><img class="menu-icon" src="../../img/logomarca-png.png" alt="Logomarca do Nexus Studium"></a>
                 </li>
                 <li class="search-bar">
                     <div>
