--- a/user/favorite-roads/index.html
+++ b/user/favorite-roads/index.html
@@ -17,7 +17,7 @@
         <nav>
             <ul class="grid-header">
                 <li class="menu-btn">
-                    <img class="menu-icon" src="../../img/logomarca-png.png" alt="Logomarca do Nexus Studium">
+                    <a href="../../login-page/index.html"><img class="menu-icon" src="../../img/logomarca-png.png" alt="Logomarca do Nexus Studium"></a>
                 </li>
                 <li class="search-bar">
                     <div>
