--- a/user/who-follow/index.html
+++ b/user/who-follow/index.html
@@ -66,76 +66,76 @@
                 <div class="flex mentor">
                     <div class="flex mentor">
                         <div class="mentor-photo"><i class="mentor-icon fa-solid fa-user"></i></div>
-                        <div class="flex mentor-name">Junin Pro do PHP</div>
+                        <div class="flex mentor-name">Prof. Carlos de Araújo</div>
                     </div>
                 </div>
                 <div class="flex mentor">
                     <div class="mentor-photo"><i class="mentor-icon fa-solid fa-user"></i></div>
-                    <div class="flex mentor-name">Junin Pro do PHP</div>
+                    <div class="flex mentor-name">João Henrique</div>
                 </div>
                 <div class="flex mentor">
                     <div class="mentor-photo"><i class="mentor-icon fa-solid fa-user"></i></div>
-                    <div class="flex mentor-name">Junin Pro do PHP</div>
+                    <div class="flex mentor-name">Sites com Lucimara</div>
                 </div>
             </div>
             <div class="flex mentor-row">
                 <div class="flex mentor">
                     <div class="mentor-photo"><i class="mentor-icon fa-solid fa-user"></i></div>
-                    <div class="flex mentor-name">Junin Pro do PHP</div>
+                    <div class="flex mentor-name">Hilsa do Design</div>
                 </div>
                 <div class="flex mentor">
                     <div class="flex mentor">
                         <div class="mentor-photo"><i class="mentor-icon fa-solid fa-user"></i></div>
-                        <div class="flex mentor-name">Junin Pro do PHP</div>
+                        <div class="flex mentor-name">Gabriela POO</div>
                     </div>
                 </div>
                 <div class="flex mentor">
                     <div class="mentor-photo"><i class="mentor-icon fa-solid fa-user"></i></div>
-                    <div class="flex mentor-name">Junin Pro do PHP</div>
+                    <div class="flex mentor-name">Videomakers</div>
                 </div>
                 <div class="flex mentor">
                     <div class="mentor-photo"><i class="mentor-icon fa-solid fa-user"></i></div>
-                    <div class="flex mentor-name">Junin Pro do PHP</div>
+                    <div class="flex mentor-name">Bruna Crânio</div>
                 </div>
             </div>
             <div class="flex mentor-row">
                 <div class="flex mentor">
                     <div class="mentor-photo"><i class="mentor-icon fa-solid fa-user"></i></div>
-                    <div class="flex mentor-name">Junin Pro do PHP</div>
+                    <div class="flex mentor-name">Hebert do Figma</div>
                 </div>
                 <div class="flex mentor">
                     <div class="flex mentor">
                         <div class="mentor-photo"><i class="mentor-icon fa-solid fa-user"></i></div>
-                        <div class="flex mentor-name">Junin Pro do PHP</div>
+                        <div class="flex mentor-name">Marcão da Culinária</div>
                     </div>
                 </div>
                 <div class="flex mentor">
                     <div class="mentor-photo"><i class="mentor-icon fa-solid fa-user"></i></div>
-                    <div class="flex mentor-name">Junin Pro do PHP</div>
+                    <div class="flex mentor-name">Matemática com César</div>
                 </div>
                 <div class="flex mentor">
                     <div class="mentor-photo"><i class="mentor-icon fa-solid fa-user"></i></div>
-                    <div class="flex mentor-name">Junin Pro do PHP</div>
+                    <div class="flex mentor-name">Douglas do Backend</div>
                 </div>
             </div>
             <div class="flex mentor-row">
                 <div class="flex mentor">
                     <div class="mentor-photo"><i class="mentor-icon fa-solid fa-user"></i></div>
-                    <div class="flex mentor-name">Junin Pro do PHP</div>
+                    <div class="flex mentor-name">Hype Profile</div>
                 </div>
                 <div class="flex mentor">
                     <div class="flex mentor">
                         <div class="mentor-photo"><i class="mentor-icon fa-solid fa-user"></i></div>
-                        <div class="flex mentor-name">Junin Pro do PHP</div>
+                        <div class="flex mentor-name">Design com Luana</div>
                     </div>
                 </div>
                 <div class="flex mentor">
                     <div class="mentor-photo"><i class="mentor-icon fa-solid fa-user"></i></div>
-                    <div class="flex mentor-name">Junin Pro do PHP</div>
+                    <div class="flex mentor-name">Elefante do PHP</div>
                 </div>
                 <div class="flex mentor">
                     <div class="mentor-photo"><i class="mentor-icon fa-solid fa-user"></i></div>
-                    <div class="flex mentor-name">Junin Pro do PHP</div>
+                    <div class="flex mentor-name">Adobe com Marina</div>
                 </div>
             </div>
         </div>
