--- a/user/historic/index.html
+++ b/user/historic/index.html
@@ -64,19 +64,19 @@
                 <div class="flex hour-view">Visto hoje, 15h32</div>
             </div>
             <div class="bg-card">
-                <div class="flex video"><img src="https://images.unsplash.com/photo-1640955014216-75201056c829?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Thumb do Vídeo"></div>
-                <div class="flex title-video">Usando o Adobe Premiere Pro</div>
-                <div class="flex hour-view">Visto hoje, 15h32</div>
+                <div class="flex video"><img src="https://images.unsplash.com/photo-1607112812619-182cb1c7bb61?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Thumb do Vídeo"></div>
+                <div class="flex title-video">Melhores atalhos para editar</div>
+                <div class="flex hour-view">Visto hoje, 13h01</div>
             </div>
             <div class="bg-card">
-                <div class="flex video"><img src="https://images.unsplash.com/photo-1640955014216-75201056c829?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Thumb do Vídeo"></div>
-                <div class="flex title-video">Usando o Adobe Premiere Pro</div>
-                <div class="flex hour-view">Visto hoje, 15h32</div>
+                <div class="flex video"><img src="https://images.unsplash.com/photo-1627773167916-f52e5113f0d3?q=80&w=1920&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Thumb do Vídeo"></div>
+                <div class="flex title-video">Masterizando o som do seu vídeo</div>
+                <div class="flex hour-view">Visto hoje, 12h47</div>
             </div>
             <div class="bg-card">
-                <div class="flex video"><img src="https://images.unsplash.com/photo-1640955014216-75201056c829?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Thumb do Vídeo"></div>
-                <div class="flex title-video">Usando o Adobe Premiere Pro</div>
-                <div class="flex hour-view">Visto hoje, 15h32</div>
+                <div class="flex video"><img src="https://images.unsplash.com/photo-1611162616475-46b635cb6868?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Thumb do Vídeo"></div>
+                <div class="flex title-video">Como editar vídeos para o youtube</div>
+                <div class="flex hour-view">Visto ontem, 14h57</div>
             </div>
         </div>
     </main>
