finalizando modal progresso do usuario

--- a/user/favorite-roads/index.html
+++ b/user/favorite-roads/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>Trilhas Favoritas</title>
 </head>
 
@@ -18,7 +19,8 @@
         <nav>
             <ul class="grid-header">
                 <li class="menu-btn">
-                    <a href="../../login-page/index.html"><img class="menu-icon" src="../../img/logomarca-png.png" alt="Logomarca do Nexus Studium"></a>
+                    <a href="../../login-page/index.html"><img class="menu-icon" src="../../img/logomarca-png.png"
+                            alt="Logomarca do Nexus Studium"></a>
                 </li>
                 <li class="search-bar">
                     <div>
@@ -39,7 +41,8 @@
             </div>
             <div class="user-name flex">Seu Nome</div>
             <div class="user-settings">
-                <button class="user-setting flex"><a href="../../user-settings/user-information/index.html">Config. da Conta</a></button>
+                <button class="user-setting flex"><a href="../../user-settings/user-information/index.html">Config. da
+                        Conta</a></button>
                 <div class="user-video flex">Seus Vídeos</div>
             </div>
         </section>
@@ -117,25 +120,45 @@
             <span class="close">x</span>
             <div class="bg-card-progress flex">
                 <h3>Em Andamento</h3>
-                <div class="flex">
-                    <div class="card-progress flex">
-                        <div class="progress-bar"></div>
-                        <p>TRILHA</p>
-                        <p>Edição de Vídeo Profissional para Mídias Sociais</p>
+                <div class="all-cards flex">
+                    <div>
+                        <div class="card-progress flex">
+                            <div class="progress flex">
+                                <div class="progress-bar">
+                                    <div class="w-70"></div>
+                                </div>
+                            </div>
+                            <p>TRILHA</p>
+                            <p>Edição de Vídeo Profissional para Mídias Sociais</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="card-progress flex">
+                            <div class="progress flex">
+                                <div class="progress-bar">
+                                    <div class="w-70"></div>
+                                </div>
+                            </div>
+                            <p>TRILHA</p>
+                            <p>Programação Orientada a Objetos - Conceitos</p>
+                        </div>
                     </div>
                 </div>
-                <div>
-                    <div class="card-progress flex">
-                        <div class="progress-bar"></div>
-                        <p>TRILHA</p>
-                        <p>Edição de Vídeo Profissional para Mídias Sociais</p>
-                    </div>
-                </div>
-                <div>
-                    <div class="card-progress flex">
-                        <div class="progress-bar"></div>
-                        <p>TRILHA</p>
-                        <p>Edição de Vídeo Profissional para Mídias Sociais</p>
+            </div>
+            <div class="bg-card-progress flex">
+                <h3>Concluído</h3>
+                <div class="all-cards flex">
+                    <div>
+                        <div class="card-progress flex">
+                            <i class="fa-solid fa-award fa-2xl" style="color: #3adb42;"></i>
+                            <div class="progress flex">
+                                <div class="progress-bar">
+                                    <div class="w-100"></div>
+                                </div>
+                            </div>
+                            <p>TRILHA</p>
+                            <p>Matemática Aplicada</p>
+                        </div>
                     </div>
                 </div>
             </div>
