adicionei o painel de nexuschat dentro da pagina de ajuda

--- a/doug/help/help-page.html
+++ b/doug/help/help-page.html
@@ -102,7 +102,31 @@
                 
             </div>
 
+
+            <div class="painel_nexusChat">
+                <div class="nexusChat_top">
+                    <h2><i class="fa-solid fa-circle-chevron-left" style="color: white; padding-right: 10px;"></i>NexusChat</h2>
+                </div>
+    
+                <div class="nexusChat_gap">
+                    <div class="nexusChat_content">
+                    </div>
+
+                    <div class="nexusChat_message">
+                        <textarea class="nexusChat_input" type="text" placeholder="Digite aqui sua mensagem..."></textarea>
+                        <div class="input_tolls">
+                            <div class="btnTolls">
+                                <button id="btnAttachment"><i class="fa-solid fa-paperclip" style="color: gray; font-size: 30px;"></i></button>
+                                <button id="btnEmoji"><i class="fa-regular fa-face-smile" style="color: gray; font-size: 30px;"></i></button>
+                            </div>
+                            <button id="btnSendChatNexus">Enviar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
+
 
     </main>
 
