finalizando css da tela de exercicios

--- a/exercises/index.html
+++ b/exercises/index.html
@@ -194,8 +194,28 @@
   <main>
     <div class="main-card flex">
         Como podemos definir um algoritmo?
-    </div>
+        <div class="atualizations flex">
+          <div class="att flex"><i class="ai-circle-check"></i> Acerto <p class="value">0</p></div>
+          <div class="att flex"><i class="ai-circle-x"></i> Erro <p class="value">0</p></div>
+          <div class="att flex"><i class="ai-circle-minus"></i> Ignorada <p class="value">0</p></div>
+        </div>
+      </div>
   </main>
+
+  <section class="alternate-card flex">
+    <div class="alternative flex">
+      <h3>Alternativa A:</h3>
+      <p>Um conjunto de dados dentro do computador</p>
+    </div>
+    <div class="alternative flex">
+      <h3>Alternativa B:</h3>
+      <p>Fórmula que usamos para programar jogos</p>
+    </div>
+    <div class="alternative flex">
+      <h3>Alternativa C:</h3>
+      <p>Passo a passo para realizar uma tarefa</p>
+    </div>
+  </section>
 
   <footer>
     <div class="links">
